[project]
requires-python = "==3.13.*"
name = "tmdb-resolver"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.2",
    "bs-state ==2.2.2",
    "fastapi ==0.116.1",
    "pydantic ==2.11.9",
    "httpx ==0.28.*",
    "sentry-sdk [fastapi] ==2.35.*",
    "uvicorn ==0.35.0",
]

[dependency-groups]
dev = [
    "httpx ==0.28.*",
    "mypy ==1.17.*",
    "pytest >=8, <9",
    "ruff ==0.12.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-state = {index="internal"}

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
