[project]
requires-python = "==3.13.*"
name = "tmdb-resolver"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "bs-config [dotenv] ==3.4.0",
    "bs-state ==3.0.0",
    "fastapi ==0.120.4",
    "pydantic ==2.12.3",
    "httpx ==0.28.*",
    "sentry-sdk [fastapi] ==2.43.*",
    "uvicorn ==0.38.0",
]

[dependency-groups]
dev = [
    "httpx ==0.28.*",
    "mypy ==1.18.*",
    "pytest >=8, <9",
    "ruff ==0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-state = {index="internal"}

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
